<resources>
    <string name="app_name">Tip Calulator Lukehart</string>
    <string name="radio_one">15</string>
    <string name="radio_two">20</string>
    <string name="radio_three">25</string>
    <string name="radio_custom">Custom</string>


    <string name="split_textview">Split:</string>
    <string name="bill_textview">Bill:</string>
    <string name="amount_people_textview">Amount of People:</string>
    <string name="tip_textview">Tip:</string>



    <string name="calculateButton">Calculate</string>
    <string name="resetButton">Reset</string>


    <string name="tip">Tip:</string>
    <string name="total">Total:</string>
    <string name="totalPerPerson">Total Per Person:</string>

    <string name="returnButton">Return</string>

</resources>